--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
-<body class="w-full md:w-10/12 md:mx-auto">
+<body>
    
    <!-- Navbar Start -->
 
-   <div class="navbar">
+   <div class="navbar md:w-10/12 md:mx-auto">
   <div class="navbar-start">
      <div class="text-blue-700 font-semibold text-2xl">SwiftCart</div>
   
@@ -52,6 +52,34 @@
     </div> 
 </div>
    <!-- Navbar End -->
+
+   <!-- Banner Start -->
+    <section class="relative h-[500px] flex items-center text-white">
+
+  <div class="absolute inset-0">
+    <img 
+      src="./asserts/banner-image.png"
+      class="w-full h-full object-cover"
+     
+    />
+  </div>
+
+  <div class="absolute inset-0 bg-gradient-to-r from-black/85 to-black/30"></div>
+
+  <div class="relative px-4 w-10/12 mx-auto">
+    <h1 class="text-4xl md:text-5xl font-bold">
+      Best Collection For You
+    </h1>
+    <p class="mt-4 text-lg">
+      Descove the latest trends in fashion, electronics, and more.Shop with <br>confidence and style at SwiftCart.
+    </p>
+    <button class="mt-6 btn btn-primary">
+      Shop Now
+    </button>
+  </div>
+
+</section>
+   <!-- Banner End -->
 
     <!-- Script -->
      <script src="./script/script.js"></script>
