added Features section

--- a/index.html
+++ b/index.html
@@ -81,6 +81,40 @@
 </section>
    <!-- Banner End -->
 
+   <!-- Features  Start-->
+    <section class="mt-8 w-10/12 mx-auto">
+      <div class="text-center">
+        <h2 class="font-bold text-2xl mb-3">Why Choose Us</h2>
+       <p>We provide the best shopping experience with top-notch services.</p>
+      </div>
+      <div class="grid grid-cols-1 md:grid-cols-4 mt-8 gap-4 text-wrap">
+        <div>
+          <i class="fa-regular text-xl fa-truck"></i>
+          <h2 class="text-xl font-semibold my-3">Fast Delivery</h2>
+          <p>Get your product delivery to your doorstep quickly and efficently.</p>
+        </div>
+
+        <div>
+          <i class="fa-solid text-xl fa-headset"></i>
+          <h2 class="text-xl font-semibold my-3">24/7 Support</h2>
+          <p>Our support team is available the clock to assist you.</p>
+        </div>
+
+        <div>
+          <i class="fa-solid text-xl fa-shield"></i>
+          <h2 class="text-xl font-semibold my-3">Secure Payment</h2>
+          <p>Experience safe and secure transaction with our encrypted payment system.</p>
+        </div>
+
+        <div>
+          <i class="fa-solid text-xl fa-arrow-rotate-left"></i>
+          <h2 class="text-xl font-semibold my-3">Easy Return</h2>
+          <p>Not satifitied? Return your product within 30 days.</p>
+        </div>
+      </div>
+    </section>
+   <!-- Features  End-->
+
     <!-- Script -->
      <script src="./script/script.js"></script>
 </body>
