trending section done

--- a/index.html
+++ b/index.html
@@ -114,7 +114,15 @@
       </div>
     </section>
    <!-- Features  End-->
-
+<!-- Top Rated Start -->
+    <section class="w-10/12 mx-auto my-8" >
+      <h2 class="font-bold text-2xl">Trending Now</h2>
+    <div id ="trending-container" class="grid grid-cols-1 md:grid-cols-3 gap-16">
+ 
+    
+  </div>
+    </section>
+<!-- Top Rated End -->
     <!-- Script -->
      <script src="./script/script.js"></script>
 </body>
