added footer section

--- a/index.html
+++ b/index.html
@@ -123,6 +123,60 @@
   </div>
     </section>
 <!-- Top Rated End -->
+
+<!-- Footer Start -->
+    <section class="bg-black text-white py-8">
+      <div class="w-10/12 mx-auto flex flex-col md:flex-row mb-8 justify-between items-start">
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-4 py-8">
+          <div>
+            <h2 class="text-blue-700 font-semibold text-2xl mb-4">SwiftCart</h2>
+            <p>Your one stop-shop for all your fashion and lifestyle needs. Quality product, fast delivery, and excelent support.</p>
+          </div>
+          <div>
+            <h2 class="mb-4 font-semibold">QUICK LINKS</h2>
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Products</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </div>
+
+          <div>
+            <h2 class="mb-4 font-semibold">SUPPORT</h2>
+            <ul>
+              <li>FAQ</li>
+              <li>Shopping</li>
+              <li>Returns</li>
+              <li>Privacy Policy</li>
+            </ul>
+          </div>
+        </div>
+
+        <div>
+          <h2 class="mb-4 font-semibold">SUBSCRIBE TO OUR NEWSLETTER</h2>
+          <p>The letset news, article, and resources, sent to your inbox weekly.</p>
+          <div class="flex gap-4 mt-4">
+            <input type="email" placeholder="Enter your email" class="input" />
+           <button class="btn btn-primary">Primary</button>
+           </div>
+        </div>
+         
+      </div>
+      <hr class="w-10/12 mx-auto">
+     <div class="w-10/12 mx-auto mb-4 flex justify-between mt-8">
+      
+      <p>&copy; 2026 SwiftCart inc. All rights reserved.</p>
+      <ul class="flex gap-4">
+        <li><i class="fa-brands fa-facebook"></i></li>
+        <li><i class="fa-brands fa-twitter"></i></li>
+        <li><i class="fa-brands fa-instagram"></i></li>
+        <li><i class="fa-brands fa-instagram"></i></li>
+        <li><i class="fa-solid fa-envelope"></i></li>
+      </ul>
+     </div>
+    </section>
+<!-- Footer End -->
     <!-- Script -->
      <script src="./script/script.js"></script>
 </body>
