added category filter

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
   </div>
   <div class="navbar-center hidden lg:flex">
     <ul class="menu menu-horizontal px-1 text-xl">
-    <li><a href="#">Home</a></li>
-    <li><a href="#">Products</a></li>
+    <li><a href="./index.html">Home</a></li>
+    <li><a href="./product.html">Products</a></li>
     <li><a href="#">About</a></li>
     <li><a href="#">Contact</a></li>
     </ul>
@@ -136,7 +136,7 @@
             <h2 class="mb-4 font-semibold">QUICK LINKS</h2>
             <ul>
               <li><a href="#">Home</a></li>
-              <li><a href="#">Products</a></li>
+              <li><a href="./product.html" class="show-all-products">Products</a></li>
               <li><a href="#">About</a></li>
               <li><a href="#">Contact</a></li>
             </ul>
