--- a/product.html
+++ b/product.html
@@ -66,5 +66,19 @@
    <!-- Our Products End -->
 
      <script src="./script/product.js"></script>
-</body>
+    <!-- Open the modal using ID.showModal() method -->
+<dialog id="product_modal" class="modal modal-bottom sm:modal-middle">
+  <div class="modal-box">
+    <div id="details-container">
+        
+    </div>
+    <div class="modal-action">
+      <form method="dialog">
+        <!-- if there is a button in form, it will close the modal -->
+        <button class="btn">Close</button>
+      </form>
+    </div>
+  </div>
+</dialog>
+    </body>
 </html>
